--- a/14-deep_sampling.Rmd
+++ b/14-deep_sampling.Rmd
@@ -536,11 +536,11 @@ extreme_cut_off3 <- round(extreme_cut_off3, 2)
 print(extreme_cut_off3)
 ```
 
-#### It's really an F-value
+#### It's really an $F$-value
 
-Most importantly, we don't usually refer to this ratio we have been examining as a variance ratio. We refer to it as an F-ratio.
+Most importantly, we don't usually refer to this ratio we have been examining as a variance ratio. We refer to it as an $F$-ratio or $F$-value.
 
-We used this simulation to see the range of F-ratios that occur when we KNOW all the population means are equal. You can see that this range of F-ratio value is quite wide from the graph. But, we estimated that when all three populations means are equal (and n = 5) that only 5% of F-ratios will fall above a value we estimated to be 3.88. This value is what we refer to as $F_{critical}$ when $\alpha = .05$. Thus, $F_{critical}$(2, 12) = 3.88.
+We used this simulation to see the range of $F$-ratios that occur when we KNOW all the population means are equal. You can see that this range of $F$-ratio values is quite wide from the graph. But, we estimated that when all three populations means are equal (and n = 5) that only 5% of $F$-ratios will fall above a value we estimated to be 3.88. This value is what we refer to as $F_{critical}$ when $\alpha = .05$. Thus, $F_{critical}$(2, 12) = 3.88.
 
 Compare the value we obtained to the values in $F$-table. A F-table is a table of $F_{critical}$ values. You can see the value in the table is 3.89 compared to our estimate of 3.88. Our value of 3.88 is off a bit from the one in the table because we only use 100,000 samples and not an infinite number of samples.
 
