--- a/14-deep_sampling.Rmd
+++ b/14-deep_sampling.Rmd
@@ -576,9 +576,11 @@ Much of what we have learned is summarized in the table below.
 
 ## Walk away points
 
--   Sometimes we need to shift our thinking and conceptualize the distribution of sample means as the population to which we are trying to generalize
--   think of var/n as representing the variability in the distribution of sample means due to random sampling
--   the findings that we illustrate here only hold when there is only one population the sample means come from that one population.
+* Sometimes we need to shift our thinking and conceptualize the distribution of sample means as the population to which we are trying to generalize
+
+* Think of $s_{\bar{x}}^2 = \frac{s_{people}^2}{n}$ as estimating the variability in the distribution of sample means due to random sampling. It only estimates the variability due to random sampling and not variability due to other sources.
+
+* The findings that we illustrate here only hold when a) there is one population of people or b) multiple identical populations of people.
 
 We are interested in the variance of the distribution of sample means (Figure \@ref(fig:chdeepfigure1)B). If we were "all knowing" we would know that the variance of the distribution is 31.26472. But we are not "all knowing", and so need to rely on sample data to estimate the variance of this distribution.
 
