--- a/14-deep_sampling.Rmd
+++ b/14-deep_sampling.Rmd
@@ -591,7 +591,7 @@ Much of what we have learned is summarized in the table below.
 
 ## Walk away points
 
-* Sometimes we need to shift our thinking and conceptualize the distribution of sample means as the population to which we are trying to generalize
+* Sometimes we need to shift our thinking and conceptualize the distribution of sample means as the population to which we are trying to generalize.
 
 * Think of $s_{\bar{x}}^2 = \frac{s_{people}^2}{n}$ as estimating the variability in the distribution of sample means due to random sampling. It only estimates the variability due to random sampling and not variability due to other sources.
 
