--- a/14-deep_sampling.Rmd
+++ b/14-deep_sampling.Rmd
@@ -570,7 +570,15 @@ Congratuations you have just learned how to create the values in the $F$-table f
 
 * Obtain $F_{critical}$(3, 36) for $\alpha=.01$ Look at the degrees of freedom and alpha. How many populations would you use (i.e., what would value would you use for $a$)? How many people would you use in each sample (i.e., what value would you use for $n$)? What position would you look at in the list of **sorted** variance ratios?
 
+## Central $F$-distributions
 
+In this chapter we focused on creating an $F$-distribution when the population means were the same. When you create an $F$-distribution based on a scenario where the population means are all the same we refer to that as a **Central $F$-distribution**.
+
+We created a Central $F$-distribution with 2 and 12 degrees of freedom (i.e., $a=3$ and $n=5$). But we could have used a different number of populations (i.e., a different value for $a$) or a different sample size (i.e., a different value for $n$). For example, if we had used 5 populations (i.e., $a = 5$) and a sample size of 20 (i.e., $n = 20$) then we would have created a Central $F$-distribution with 4 and 95 degrees of freedom. Recall that $df_{numerator}= a - 1 = 5 -1 = 4$ and that $df_{denominator} = a(n-1) = 5 (20-1) = 5(19) = 95$. Thus, because there are many possible Central $F$-distributions, we say there is a **Family of Central $F$-distributions**. For this Family of Central $F$-distributions, the family resemblance is that they are all based on a scenario where the population means are equal. 
+
+You may, or may not, have realized that $F$-tables are just way of summarizing the **Family of Central $F$-distributions**. That is, when you look up a value at 2 and 12 degrees of freedom in an $F$-table are obtaining information about a specific Central $F$-distribution. Specifically,  you are looking up a "cut" point for extreme values in that particular Central $F$-distribution.
+
+Also note, that when we do significance testing we use the Null Hypothesis that the population means are all equal. This is the same assumption we use when creating a Central $F$-distribution. Consquently, some people refer to a Central $F$distribution (or Central $t$ distribution) as the **Sampling Distribution for the Null Hypothesis**.
 
 ## Summary table
 
