--- a/15-deeper_sampling.Rmd
+++ b/15-deeper_sampling.Rmd
@@ -4,7 +4,9 @@ output:
   html_document: default
 ---
 
-# Deeper Dive: Sampling Distributions (Unequal population means)
+# Deeper sampling [under construction]
+
+## Deeper Dive: Sampling Distributions (Unequal population means)
 
 ## Previously
 
